--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/premputtegowda/node-auth1-project#readme",
   "dependencies": {
+    "connect-session-knex": "^1.5.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "knex": "^0.20.10"
